# pydsstools

./: .gitattributes  .gitignore  API.md  CHANGES.MD  Dockerfile  LICENSE  MANIFEST.in  README.md  build.sh  cmd_intel_environ.bat  pyproject.toml  requirements.txt  script.sh  setup.cfg  setup.py
.github/workflows/: build-publish.yml  build-publish_optA.yml  build-publish_optB.yml
dssVue/: DISCLAIMER.MD
outdated_wheels/: pydsstools-2.2-cp36-cp36m-win_amd64.whl  pydsstools-2.2-cp38-cp38-win_amd64.whl  pydsstools-2.2-cp39-cp39-win_amd64.whl  pydsstools-2.3-cp311-cp311-win_amd64.whl
pydsstools/: __init__.py  _version.py  core_heclib.pyd
pydsstools/_lib/: __init__.py
pydsstools/_lib/x64/: core_heclib.pyd
pydsstools/_lib/x64/py36/: core_heclib.pyd
pydsstools/_lib/x64/py36/doc/: catalog.html  constants.html  core_heclib.c  core_heclib.html  core_heclib_imports.html  exceptions.html  grid.html  hectime.html  open.html  paired_data.html  time_series.html  utils.html
pydsstools/_lib/x64/py37/: core_heclib.pyd
pydsstools/_lib/x64/py37/doc/: catalog.html  constants.html  core_heclib.c  core_heclib.html  core_heclib_imports.html  exceptions.html  grid.html  hectime.html  open.html  paired_data.html  time_series.html  utils.html
pydsstools/_lib/x64/py38/: core_heclib.pyd
pydsstools/_lib/x86/: __init__.py  core_heclib.pyd
pydsstools/_libdll/: __init__.py  heclib.py
pydsstools/core/: __init__.py  accessors.py  constants.py  coreheclib.py  crs.py  grid.py  grid_accessors.py  gridinfo.py  gridv6_internals.py  transform.py
pydsstools/examples/: DailyTemp7.dss  example.dss  example1.py  example10.py  example10_write_grid.py  example11.py  example11_read_catalog.py  example12_copy_record.py  example13.py  example13_del_record.py  example14.py  example14_grid_geo.py  example15.py  example16.py  example1_write_rts.py  example2.py  example2_read_rts.py  example3.py  example3_write_irts.py  example4.py  example4_read_irts.py  example5.py  example5_write_pd.py  example6.py  example6_read_pd.py  example7.py  example7_prealloc_pd.py  example8.py  example8_write_curve_pd.py  example9.py  example9_read2_gridver0.py  example9_read_gridver0.py  example9_read_gridver100.py  example_dss6.dss  test1.py  test2.py  test3.py
pydsstools/examples/files/: sample.dss  spatialgrid0.dss
pydsstools/examples/sample_dss/: grid6.dss  grid7.dss
pydsstools/heclib/: __init__.py  dssExceptions.py  dsslog.dss  general.py  gridv6.py  util.py  utils.py
pydsstools/heclib/dss/: HecDss.py  __init__.py
pydsstools/src/: _chelper.pxd  _chelper.pyx  _zcompression.pyx  catalog.pyx  checlib.pxd  compression.pyx  constants.pyx  core_heclib.pyx  core_heclib_imports.pyx  exceptions.pyx  grid.pyx  hectime.pyx  open.pyx  paired_data.pyx  spatial_tin.pyx  time_series.pyx  utils.pyx
pydsstools/src/compile/: VS_PY36.bat  VS_PY37.bat  env.bat  linux_py36.sh  linux_py37.sh  py36_env.bat  py37_env.bat  testdss.py.dss  win.bat  win_py36.bat  win_py37.bat
pydsstools/utils/: contrail.py  usgs.py
