[metadata]
name = pydsstools
version = 1.8
description = Python library to read-write HEC-DSS database file
long_description = file: README.md
long_description_content_type = text/markdown
url = 
author = Gyan Basyal
author_email = gyanBasyalz@gmail.com
license = MIT
license_file = LICENSE
classifiers = 
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Water resources engineers/Engineers/Researcher
    Operating System :: Windows 10/Linux
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
#project_urls = 
#    Documentation = 
#    Source Code = 

[options]
#packages = find: 
install_requires = 
    numpy>=1.16.4
    pandas
    affine
python_requires = >=3.6
extra_require = 
    rasterio
    matplotlib
include_package_data = True
zip_safe = False

[build_ext]
inplace = False

#[options.extras_require]

